// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VariableDeclarationNode Creates the same json when toJSON() is called 1`] = `
{
  "node": "Declaration: type bar, id foo",
  "value": {
    "node": "Int Literal: 3",
  },
}
`;

exports[`VariableDeclarationNode Creates the same json when toJSON() is called 2`] = `
{
  "node": "Assignment: foo",
  "value": {
    "node": "Int Literal: 3",
  },
}
`;

exports[`VariableNode Creates the same json when toJSON() is called 1`] = `
{
  "node": "Identifier: foo",
}
`;
